<resources>
    <string name="app_name">Water Coach for Nabu</string>
    <string name="close_drawer">Close Menu</string>
    <string name="open_drawer">Open Menu</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="About">About</string>
    <string name="razer_app_id">bae7564497ad6c0d782c2eef392c8ec5ebec57de</string>
    <string name="default_water_ml_goal">2000</string>
    <string name="pref_key_goal">pref_key_goal</string>
    <string name="pref_key_enable_notification">enable_notification</string>
    <string name="remove_water_dialog_title">Do you want to remove this registry?</string>
    <string name="yes">YES</string>
    <string name="goal_summary">You should to drink  #GOAL# ml through the day</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_enable">Enable Notifications</string>
    <string name="goal">Goal</string>
    <string name="notifications_start">Start at</string>
    <string name="notifications_start_summary">Notification starts at #TIME#</string>
    <string name="pref_key_notification_start_time">notification_start_time</string>
    <string name="notifications_end">End at</string>
    <string name="notifications_end_summary">Notifications stops at #TIME#</string>
    <string name="pref_key_notification_end_time">notification_end_time</string>
    <string name="action_drink_water">Drink Water</string>
    <string name="label_add_water">Drink Water</string>
    <string name="notifications_interval">Interval</string>
    <string name="notifications_interval_summary">You will be notified every #INTERVAL# minutes</string>
    <string name="pref_key_notification_interval">pref_key_notification_interval</string>
    <string name="notification_line">It´s time to drink Water</string>
    <string name="pref_key_current_score">current_score</string>
    <string name="pref_key_first_run">pref_key_first_run</string>
    <string name="get_userProfile_fail">Problems to get the user´s profile</string>
    <string name="pre_key_nickname">key_profile_nickname</string>
    <string name="pref_key_nickname">pref_key_nickname</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">CrashTest has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report&#8230;</string>
    <string name="crash_notif_title">CrashTest has crashed&#8230;</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="splash_first_line">WATER COACH</string>
    <string name="splash_second_line">FOR RAZER NABU</string>
    <string name="about">About</string>
    <string name="developed_by">Developed by Rogerio Souza</string>
    <string name="disclaimer">Razer Nabu X is a trademark of Razer Inc. All other trademarls are propely of their respectives owners</string>
    <string name="login_razerid_title">This app is built to be integrated with a Razer Nabu/Nabu X.</string>
    <string name="login_razerid_message">If you are using one, your RazerID will automatically be read via the Utility app</string>
    <string name="action_history">history</string>
    <string name="imutable_past_information">Can not change past informations</string>
    <string name="action_statics">Statistics</string>
    <string name="title_activity_water_consumption_chart">Water onsumption</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
