<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:key="preferences"
    xmlns:cd2="http://schemas.android.com/com.coded2"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                   android:title="@string/notifications">
                <SwitchPreference
                    android:title="@string/notifications_enable"
                    android:key="@string/pref_key_enable_notification"
                    android:defaultValue="false"/>


            <com.coded2.CustomTimePreference
                android:title="@string/notifications_start"
                android:summary="@string/notifications_start_summary"
                android:dialogLayout="@layout/custom_time_preference_dialog"
                android:key="@string/pref_key_notification_start_time"
                android:dependency="@string/pref_key_enable_notification"
                android:widgetLayout="@layout/custom_value_view_preference"
                />

            <com.coded2.CustomTimePreference
                android:title="@string/notifications_end"
                android:summary="@string/notifications_end_summary"
                android:dialogLayout="@layout/custom_time_preference_dialog"
                android:key="@string/pref_key_notification_end_time"
                android:dependency="@string/pref_key_enable_notification"
                android:widgetLayout="@layout/custom_value_view_preference"
                />

            <com.coded2.CustomNumberPreference
                android:title="@string/notifications_interval"
                android:summary="@string/notifications_interval_summary"
                android:dialogLayout="@layout/custom_number_preference_dialog"
                android:key="@string/pref_key_notification_interval"
                android:dependency="@string/pref_key_enable_notification"
                android:widgetLayout="@layout/custom_value_view_preference"
                cd2:minValue="1"
                cd2:maxValue="60"/>


        </PreferenceCategory>

        <PreferenceCategory
                android:title="@string/goal">
            <EditTextPreference
                android:title="@string/goal"
                android:summary="@string/goal_summary"
                android:key="@string/pref_key_goal"
                android:width="10dp"
                android:gravity="center"
                android:defaultValue="2000"
                android:inputType="numberSigned"/>
        </PreferenceCategory>

</PreferenceScreen>